# forza-horizon-6-telemetry

./: .gitignore  VERSION  index.html  package.json
docs/: README.md  development.md  settings.md  telemetry.md  tuning.md  user-guide.md
public/: hud.html
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  server.rs  shift.rs  telemetry.rs
src/components/: HudPreview.vue  InfoTip.vue
src/views/: DashboardTab.vue  GForceTab.vue  HudTab.vue  PowerTab.vue  RecordTab.vue  SettingsTab.vue  SuspensionTab.vue  TiresTab.vue
tools/: capture_raw.py
