[package]
name = "fh6-telemetry"
version = "0.2.0"
description = "FH6 Telemetry Toolkit - UDP capture, HUD overlay, shift advisor"
authors = ["capsellabp"]
edition = "2021"

[lib]
name = "fh6_telemetry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "sync", "time", "macros", "rt"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
bytes = "1"

